[gd_scene load_steps=7 format=3 uid="uid://rh1o32f8llsb"]

[ext_resource type="Script" path="res://scenes/game/maps/lobby/skin_selector/skin_selector.gd" id="1_m1i30"]
[ext_resource type="PackedScene" uid="uid://b84ikvrvlejqh" path="res://scenes/ui/background_button/background_button.tscn" id="2_8qf0f"]
[ext_resource type="PackedScene" uid="uid://b8yh2vysfv24q" path="res://scenes/ui/close_button/close_button.tscn" id="2_ngy30"]
[ext_resource type="PackedScene" uid="uid://dnfvmswm3sk7g" path="res://scenes/ui/window_animation_player/window_animation_player.tscn" id="4_51umu"]
[ext_resource type="AudioStream" uid="uid://cmmpncpd1ccw" path="res://assets/audio/window_open_sound.ogg" id="5_f121v"]
[ext_resource type="AudioStream" uid="uid://ynxw2pohm2pc" path="res://assets/audio/window_close_sound.ogg" id="6_a6pkg"]

[node name="SkinSelector" type="CanvasLayer"]
script = ExtResource("1_m1i30")

[node name="BackgroundButton" parent="." node_paths=PackedStringArray("window") instance=ExtResource("2_8qf0f")]
window = NodePath("..")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wybierz swoją postać"
horizontal_alignment = 1

[node name="SkinTextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 4

[node name="SkinOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="CloseButton" parent="Panel" node_paths=PackedStringArray("window") instance=ExtResource("2_ngy30")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -360.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 360.0
grow_horizontal = 0
grow_vertical = 1
pivot_offset = Vector2(360, 0)
window = NodePath("../..")

[node name="WindowAnimationPlayer" parent="Panel" instance=ExtResource("4_51umu")]

[node name="WindowOpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f121v")
volume_db = -25.0

[node name="WindowCloseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_a6pkg")
volume_db = -25.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/SkinOptionButton" to="." method="_on_skin_option_button_item_selected"]
